[metadata]
name = codexregius
version = 0.10.0
author = StealthyPanda
author_email = shaikm259@gmail.com
description = A simple debugging library
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://gitlab.com/codasteroid/basicpkg
# project_urls =
#     Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
#     repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src